# aws-iot-lambda

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
src/: handler.py
