[tool.poetry]
name = "aws-iot-lambda"
version = "0.1.0"
description = ""
authors = ["doara-developer <doaradev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
bandit = "^1.7.4"
autopep8 = "^1.6.0"
flake8-quotes = "^3.3.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
flake8-annotations = "^2.9.0"
flake8-mypy = "^17.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
